--- a/lesson8/css/table.css
+++ b/lesson8/css/table.css
@@ -28,8 +28,12 @@ tr:nth-child(even) {
     background-color: #e7ffed;
 }
 thead {
-    font-size: 1.7em;
+    font-size: 1.1em;
     font-weight: bold;
+}
+th {
+    background: #7fb9c2;
+    font-size: 1.4em;
 }
 thead, #novgoal {
     background: #628ca6;
@@ -38,6 +42,5 @@ thead, #novgoal {
 tfoot {
     color: black;
     background: #7fb9c2;
-    
     font-size: .7em;
 }
