--- a/lesson9/css/large.css
+++ b/lesson9/css/large.css
@@ -4,6 +4,9 @@
         max-width: 920px;
         margin: 0 auto;
     }
+    .cards {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
     #weathersummary {
         top: 32px;
     }
