--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -111,9 +111,7 @@ main section {
     margin-bottom: 0em;
 }
 #weathersummary {
-    position: absolute;
-    top: 10px;
-    left: 40px;
+    margin: 1em auto;
     max-width: 70%;
     background-color: #ffffff97;
     padding-right: .7em;
@@ -127,11 +125,9 @@ main section {
 }
 /* events */
 .eventdiv {
-    position: absolute;
-    bottom: 30px;
-    right: 40px;
-    max-width: 70%;
-    background-color: #ffffff60;
+    margin: 1em auto;
+    max-width: 80%;
+    background-color: #ffffff;
     padding-right: .7em;
     border: 1px solid;
     box-shadow: 0px 3px 19px -3px rgba(0,0,0,0.71);
