--- a/lesson11/css/large.css
+++ b/lesson11/css/large.css
@@ -44,7 +44,7 @@
         border: none;
     } */
     .gal-grid div:hover {
-        box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75) ;
+        box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.884) ;
         transition: .2s;
     }
 }
