--- a/lesson11/css/large.css
+++ b/lesson11/css/large.css
@@ -16,8 +16,8 @@
         display: flex;
         flex-direction: column;
     }
-    section:nth-child(even) {
-        flex-direction: row;
+    .cards section:nth-child(odd) {
+        flex-direction: column;
 
     }
     .eventdiv {
