--- a/lesson11/css/medium.css
+++ b/lesson11/css/medium.css
@@ -21,13 +21,10 @@
     .cards {
         grid-template-columns: 1fr;
     }
-    .cards section div:nth-child(odd) {
-        flex-direction: row;;
-    }
     .cards section {
         display: flex;
     }
-    .cards section:nth-child(even) {
+    .cards section:nth-child(odd) {
         flex-direction: row-reverse;
     }
 
