--- a/final/css/small.css
+++ b/final/css/small.css
@@ -1,12 +1,15 @@
 /* small and standard view */
+
 body {
     font-family: 'Taviraj', serif;
     background-color: white;
     margin: 0 auto;
+    max-width: 1000px;
     /* Sonsie One', 'Gugi', 'Taviraj */
 }
 aside {
-    background-color: #006d62;
+    background-color: #052142;
+    color: white;
     margin: 0 auto;
     text-align: center;
     padding: 15px;
@@ -19,22 +22,30 @@ header,
 footer {
     padding: 1rem;
     color: black;
-    text-align: center;
+    
 }
 header {
-    background-color: #b5ff97;
+    text-align: left;
+    background-color: #05123B;
     justify-content: center;
+    color: white;
+    padding: 2em;
+    display: flex;
 }
+/* .titlecard {
+    padding: 1em;
+} */
 .icon {
-    width: 146px;
+    max-width: 150px;
+    padding: 2em;
 }
 
 h1 {
-    font-family: 'Sonsie One', 'Gugi';
+    font-family: 'Sonsie One', 'Gugi', cursive;;
 }
 h2, h3 {
     margin-left: .5em;
-    font-family: 'Gugi', 'Sonsie One';
+    font-family: 'Gugi', cursive, 'Sonsie One';
     text-align: center;
 }
 h3 {
@@ -52,7 +63,7 @@ li p {
 /* navagation */
 nav {
     margin: 0 auto;
-    background-color: #6BE871;
+    background-color: #025780;
 }
 .navbar {
     list-style: none;
@@ -66,6 +77,7 @@ nav {
 }
 .navbar li {
     display: none;
+    
 }
 .navbar a {
     display: block;
@@ -74,9 +86,11 @@ nav {
     padding: .6em;
     font-size: larger;
     border-radius: .75rem;
+    color: white;
 }
 .navbar a:hover {
     font-weight: bold;
+    /* color: white; */
 }
 .responsive li {
     display: block;
@@ -91,155 +105,20 @@ main section {
     margin: 25px auto;
     padding: 1px;
 }
-/* home page */
-#homegrid {
-    display: block;
-}
-#homegrid a {
-    border: 1px solid black;
-}
-/* weather summary */
-.summary {
-    position: relative;
-    border: none;
-}
-.summary img {
-    max-width: 100%;
-    border: 3px solid;
-    border-radius: 15px;
-    box-shadow: 0px 1px 12px 0px rgba(0,0,0,0.71);
-    margin-bottom: 0em;
-}
 #weathersummary {
-    margin: 1em auto;
-    max-width: 70%;
-    background-color: #ffffffc5;
-    padding-right: .7em;
-    border: 1px solid;
-    box-shadow: 0px 3px 19px -3px rgba(0,0,0,0.71);
-    border-radius: 10px;
-}
-#weathersummary p, #weathersummary h3 {
-    margin: .3em;
-    font-size: 1.4em;
-}
-/* events */
-.eventdiv {
-    margin: 1em auto;
-    max-width: 80%;
-    background-color: #ffffff;
-    padding-right: .7em;
-    border: 1px solid;
-    box-shadow: 0px 3px 19px -3px rgba(0,0,0,0.71);
-    border-radius: 10px;
-}
-.eventdiv li, .eventdiv h3 {
-    margin: .3em;
-    font-size: 1.4em;
-    list-style-type: none;
-}
-/* 5 day forcast */
-.forecast {
-    display: none;
-    text-align: center;
-    background: rgb(255, 250, 232);
-    padding: 10px;
-    border-radius: 15px;
-    box-shadow: 0px 1px 12px 0px rgba(0,0,0,0.71);
-}
-table {
-    border-spacing: 0px;
-    border: 1px solid;
-    margin: auto;
-}
-tr td, tr th {
-    border: 2px solid;
-    background: #f1f1f1;
-    padding: 4px;
-}
-.forecast img {
-    padding: .5em;
-    width: 100px;
-}
-.forecast span {
-    font-size: 1.5em;
-}
-/* article */
-.article {
-    border: 1px solid;
-    background: whitesmoke;
-    margin: .3em;
-}
-.article p {
-    text-indent: 50px;
-}
-.article:nth-child(even) {
-    display: block;
-}
-.article img {
-    float: none;
-    width: 83%;
-    margin: .5em;
-    border: 3px solid;
-    margin-left: 3em;
-}
-/* map and contact info */
-.mapcontact {
-    display: flex;
-    margin-bottom: 0;
-    flex-direction: column;
-}
-.mapcontact div {
-    margin: 0 1.2em;
-}
-.mapcontact h3 {
-    margin-left: -.7em;
-}
-.mapcontact .socials {
-    margin: 10px auto;
-}
-.map {
-    display: none;
-}
-.map img {
-    box-shadow: 2px 2px 11px 0px rgba(0,0,0,0.71);
-    height: 232px;
-}
-.contact p {
-    line-height: 2em;
-    margin: 0;
-}
-.socials a {
-    text-decoration: none;
-}
-.socials a img {
-    width: 65px;
-    max-width: 70%;
-}
-/* gallery */
-.gal-grid {
-    max-width: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 15px;
-    margin: 1.5em;
-
-}
-.gal-grid div {
     border: 1px solid black;
+    width: 300px;
+    margin: 1em;
+    padding: 1em;
+    float: right;
+
+}
+#weathersummary p, h3 {
+    padding: 5px;
+    margin: 0;
+    text-align: center;
 }
 
-.gal-grid picture img {
-    max-width: 100%;
-}
-.gal-grid p {
-    margin: 0;
-    padding: .2em;
-    
-}
-.gal-grid picture {
-    display: block;
-}
 /* lazy load */
 img[data-src] {
     filter: blur(0.2em);
@@ -252,8 +131,17 @@ body {
     text-align: center;
 }
 /* footer */
+.socials a {
+    text-decoration: none;
+}
+.socials a img {
+    width: 65px;
+    max-width: 70%;
+}
 footer {
-    background-color: #6BE871;
+    background-color: #025780;
+    text-align: center;
+    font-family: 'Gugi', cursive;
 }
 footer a {
     color: black;
@@ -262,5 +150,5 @@ footer p {
     margin-left: 0;
 }
 .updateline {
-    color: #404040;
+    color: white;
 }
