--- a/final/css/small.css
+++ b/final/css/small.css
@@ -28,6 +28,8 @@ header {
     justify-content: center;
     padding: 2em;
     display: flex;
+    border-radius: 30px 0 0 0;
+    box-shadow: 0px 3px 19px -3px rgba(0,0,0,0.71);
 }
 header div {
     padding-top: 1.5em;
@@ -67,6 +69,8 @@ li p {
 nav {
     margin: 0 auto;
     background-color: #025780;
+    border-radius: 0 0 30px 0;
+    box-shadow: 0px 3px 19px -3px rgba(0,0,0,0.71);
 }
 .navbar {
     list-style: none;
@@ -114,12 +118,14 @@ main section {
     margin: 1em auto;
     padding: 1em;
     float: none;
-
+    border-radius: 30px 0;
+    box-shadow: 5px 6px 15px 0px rgba(0,0,0,0.75);
 }
 #weathersummary p, h3 {
     padding: 5px;
     margin: 0;
     text-align: center;
+    
 }
 th p {
     margin: 0;
@@ -127,7 +133,8 @@ th p {
 .prices {
     max-width: 90%;
     border: 1px solid black;
-    /* shaddow */
+    border-radius: 30px 0;
+    box-shadow: 5px 6px 15px 0px rgba(0,0,0,0.75);
 }
 .prices table {
     border-spacing: 0px;
@@ -135,7 +142,6 @@ th p {
     
 }
 .prices td, th, p {
-    /* border: 1px solid black; */
     text-align: center;
 }
 .prices th p {
@@ -154,6 +160,22 @@ th p {
 }
 .cardpic {
     max-width: 80%;
+}
+.rules {
+    margin: 1em 4em;
+}
+fieldset {
+    display: flex;
+    margin-bottom: 1em;
+    border-radius: 30px 0;
+    box-shadow: 5px 6px 15px 0px rgba(0,0,0,0.75);
+}
+label {
+    margin: 1em;
+}
+textarea {
+    width: 80%;
+    height: 100px;
 }
 
 /* lazy load 
